--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "53:53/tcp"
       - "53:53/udp"
       - "67:67/udp"
-      - "8081:9009/tcp"
+      - "8081:80/tcp"
     environment:
       TZ: 'Europe/Madrid'
       WEBPASSWORD: "${ADMIN_PASSWORD}"
@@ -22,12 +22,12 @@ services:
     restart: unless-stopped
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.jellyfin.rule=Host(`pihole.${HTTP_HOST}`)"
-      - "traefik.http.routers.jellyfin.tls=true"
-      - "traefik.http.routers.jellyfin.entrypoints=websecure"
-      - "traefik.http.routers.jellyfin.tls.certresolver=lets-encrypt"
-      - "traefik.http.routers.jellyfin.middlewares=simpleauth@file"
-      - "traefik.port=8081"
+      - "traefik.http.routers.pihole.rule=Host(`pihole.${HTTP_HOST}`)"
+      - "traefik.http.routers.pihole.tls=true"
+      - "traefik.http.routers.pihole.entrypoints=websecure"
+      - "traefik.http.routers.pihole.tls.certresolver=lets-encrypt"
+      - "traefik.http.routers.pihole.middlewares=simpleauth@file"
+      - "traefik.port=80"
     networks:
       - internal
       - web
